--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
 
     <main>
         <div class="main__container">
-            <div class="main_title block">
-                
+            <div class="left">
+                <div class="main_title block">
+                    <img src="/images/avatar.jpg" class="avatar">
+                    <div class="text_links">
+                        <h1>K3yM</h1>
+                        <p>Привет! Ты попал на мой сайт-визитку, хорошего время
+                            препровождения)
+                        </p>
+                        <div class="side_links">
+                            <div onclick="location.href='https://open.spotify.com/user/31ki4brendckm7x5kf4wmajm3a2q';" class="side_link spotify"></div>
+                            <div onclick="location.href='https://steamcommunity.com/id/k3ym/';" class="side_link steam"></div>
+                            <div onclick="location.href='https://www.twitch.tv/arteminmine';" class="side_link twitch"></div>
+                        </div>
+                    </div>  
+                </div>
+                <div class="pustota">Пустое пространство, а что тут еще должно быть?</div>
             </div>
             <div class="main_links">
                 <div onclick="playAudio('sounds/meow.mp3')" class="block1 block"></div>
@@ -30,9 +44,11 @@
                 <div onclick="playAudio('sounds/meow2.mp3')" class="block6 block"></div>
                 <div class="block7 block">
                     <p class="block7-p">Спасибо за то что зашел сюда)</p>
+                    <div class="cat_white_gif"></div>
                 </div>
             </div>
         </div>
+        <div class="author">by K3yM</div>
     </main>
 </body>
 </html>
