--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">Главная</a>
+            <a href="home.html">Главная</a>
             <a>Портфолио</a>
         </nav>
     </header>
