--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <header>
         <div class="burger-menu">
             <span></span>
+            <div class="click"></div>
         </div>
-        <div class="click">
+        
 
         </div>
         <nav class="burger-menu-content">
@@ -73,8 +74,11 @@
                 </div>
             </div>
         </div>
-        <div class="author">by K3yM</div>
+        
     </main>
+    <footer>
+        <div class="author">by K3yM</div>
+    </footer>
     <script src="scripts/playSound.js"></script>
     <script src="scripts/burgerMenu.js"></script>
 </body>
